Sun Jan 14 02:19:18 CST 2001 Adam Heath <doogie@debian.org>

  * main/main.c, main/archives.c:  Add a --command-pipe.  This allows
    multiple commands to be passed to a single instance of dpkg, over
    the file descriptor passed on the cmdline.

Thu Jan 11 09:35:00 PST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.pl: do chown before chmod so we don't
    loose setuid bits

Mon Jan  8 15:46:13 PST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.{pl,8}: remove --import option now that
    suidmanager can convert everything

Mon Jan  8 15:12:21 PST 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.pl: add vim swapfiles to the default ignore regexp

Mon Jan  8 10:38:28 PST 2001 Wichert Akkerman <wakkerma@debian.org>

  * po/fr.po: updated

Sun Jan  7 14:31:38 CST 2001 Adam Heath <doogie@debian.org>

  * lib/dbmodify.c: After N calls(which does a checkpoint()), reset
    the counter.

Sun Jan  7 14:27:57 CST 2001 Adam Heath <doogie@debian.org>

  * include/dpkg-db.h:  Forgot the status-pipe struct.

Fri Jan  5 22:36:24 CST 2001 Adam Heath <doogie@debian.org>

  * main/main.c, lib/dbmodify.c, main/dpkg.8: Add a --status-pipe.

Fri Jan  5 22:25:06 CST 2001 Adam Heath <doogie@debian.org>

  * lib/varbuf.c: varbuf(v)printf now return the number of characters
    they added to the buffer.

Thu Jan  4 01:20:27 CST 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/build.c, dpkg-deb/extract.c, dpkg-deb/info.c,
    include/dpkg.h.in, lib/mlib.c, main/archives.c, main/enquiry.c,
    main/help.c main/processarc.c: Add 'warn' parameter to waitsubproc
    and checksubprocerr, and also add a return value.  This fixes my
    last checkin, where maintainer_script_alternative would run
    both the old and new script.

Thu Jan 04 05:19:37 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Wed Jan  3 10:35:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>
