@@ -1,3 +1,8 @@
+Sun Jan 14 02:27:48 CST 2001 Adam Heath <doogie@debian.org>
+
+  * main/main.h, main/main.c:  Change --{status,command}-pipe to
+    --{status,command}-fd.
+
 Sun Jan 14 02:19:18 CST 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c, main/archives.c:  Add a --command-pipe.  This allows
